Corrected image case sensitive extension

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<p>843.689.2447</p>
 		</div>
 		<div id="mapSpace">
-			<img id="map" src="./image/map.png" alt="The map."/>			
+			<img id="map" src="./image/mapped.png" alt="The map."/>			
 		</div>
 		<div id="hours">
 			<p>Open</p>
